objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Days_Notice_for_Termination__c</fullName>
        <description>Number of days the client must give prior to termination</description>
        <label>Days Notice for Termination (CC)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Delegated_Credentialing_Agreement__c</fullName>
        <label>Is there a delegated credentialing agree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Direct_Damages_Client_Cap__c</fullName>
        <description>Any numerical values should be written out in number form. (e.g. $5,000,000 or 2x)</description>
        <label>Direct Damages: Client Cap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Direct_Damages_TDH_Cap__c</fullName>
        <description>Any numerical values should be written out in number form. (e.g. $5,000,000 or 2x)</description>
        <label>Direct Damages: TDH Cap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DisputeResolution__c</fullName>
        <defaultValue>&quot;Meeting Before Court Action&quot;</defaultValue>
        <description>Type of dispute resolution</description>
        <label>Dispute Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
                <value>
                    <fullName>Court Action</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Mediation</fullName>
                </value>
                <value>
                    <fullName>Meeting Before Court Action</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_DocumentName__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_EMS_Product_family__c</fullName>
        <label>EMS Product family</label>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_EligibleEmployeesDependentsDesc__c</fullName>
        <description>Provide a description of eligible employees/dependents  - e.g., all employees, benefits eligible, benefits enrolled, extended family.</description>
        <label>Desc. of Eligible Employees &amp; Dependents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Email_for_Invoice__c</fullName>
        <description>Please provide the email for invoice if known at the time of request</description>
        <label>Email for Invoice (if known)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_Encryption_of_PHI_at_Rest_Req__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <description>Indicate whether encryption of PHI at rest is required</description>
        <label>Encryption of PHI at Rest Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_EquipmentBundleExtSum__c</fullName>
        <label>EquipmentBundleExtSum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Equipment_Schedule_Number__c</fullName>
        <description>Informed by leasing company or for internal lease could use a system generated number.</description>
        <label>Equipment Schedule Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ExceptionsToAssignmentConsent__c</fullName>
        <defaultValue>&quot;Successor Entity &amp; Corporate Restructure&quot;</defaultValue>
        <description>Indicates whether there are exceptions to Teladoc&apos;s ability to assign the agreement</description>
        <label>Exceptions to Assignment Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Exceptions</fullName>
                </value>
                <value>
                    <fullName>Successor Entity</fullName>
                </value>
                <value>
                    <fullName>Successor Entity &amp; Corporate Restructure</fullName>
                </value>
                <value>
                    <fullName>Acquirer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ExpertMedServicesRefFeePer__c</fullName>
        <label>Expert Medical Services Referral Fee (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Expire_Custom__c</fullName>
        <description>Expire the Agreement</description>
        <formula>IF (AND($User.Id = OwnerId,ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Activated&quot;))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Expire the Agreement</inlineHelpText>
        <label>Expire_Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Close_Date__c</fullName>
        <description>Used to specify fast close date, if fast start is offered</description>
        <label>Fast Start Close Date (Chronic Care)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Credit_Offered__c</fullName>
        <description>Used to indicate whether fast start credit applies, If so, users will be required to populate the fast start credit fields</description>
        <label>Fast Start Credit Offered?(Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Credit_Type__c</fullName>
        <description>Used to specify fast start credit type, if fast start is offered</description>
        <label>Fast Start Credit Type (Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-time ($X,XXX credit or $X PPPM credit)</fullName>
                </value>
                <value>
                    <fullName>Recurring (credit of $xPPPM)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Custom__c</fullName>
        <description>Used to specify any fast start custom details</description>
        <label>Fast Start Custom (Chronic Care)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Launch_Date__c</fullName>
        <description>This is rarely used on newer contracts, but there will be language that states if they sign or implement by a certain date a credit will be issued to them.</description>
        <label>Fast Start Launch Date (Chronic Care)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Participation_Rate_Date__c</fullName>
        <description>This is rarely used on newer contracts, but there will be language that states if they sign or implement by a certain date a credit will be issued to them.</description>
        <label>Fast Start Participation Rate Met (CC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Fast_Start_Participation_Rate__c</fullName>
        <description>Used to specify fast participation rate, if fast start is offered</description>
        <label>Fast Start Participation Rate (CC)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Increase_Allowed__c</fullName>
        <label>3% Fee Increase Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Fee_Increase_Comments__c</fullName>
        <label>Fee Increase Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Increase_Notice_Days__c</fullName>
        <label>Fee Increase Notice Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Force_Majeure__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <description>Indicate whether the Force Majeure clause excuses TDH from performance breach in the case of a Force Majeure event. If yes, does the other party have the right to terminate the agreement (if so, select Yes With Right to Terminate).</description>
        <label>Force Majeure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes With Right To Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_GM_Product_Count__c</fullName>
        <label>GM Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Governing_Law_Field__c</fullName>
        <formula>IF( TEXT( APTS_Governing_Law__c ) = &quot;Others&quot; ,  APTS_Other_Governing_Law__c ,  TEXT( APTS_Governing_Law__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Governing Law Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Governing_Law__c</fullName>
        <label>Governing Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                    <default>true</default>
                    <label>New York</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_HIPAA_Covered_Entity__c</fullName>
        <description>Used to capture the HIPPA covered entity name from the contract</description>
        <label>HIPAA Covered Entity (Chronic Care)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_HYGeneralAgentReferralFeePercentage__c</fullName>
        <label>HY General Agent Referral Fee (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one percent (1%)</fullName>
                </value>
                <value>
                    <fullName>two percent (2%)</fullName>
                </value>
                <value>
                    <fullName>three percent (3%)</fullName>
                </value>
                <value>
                    <fullName>four percent (4%)</fullName>
                </value>
                <value>
                    <fullName>five percent (5%)</fullName>
                </value>
                <value>
                    <fullName>six percent (6%)</fullName>
                </value>
                <value>
                    <fullName>seven percent (7%)</fullName>
                </value>
                <value>
                    <fullName>eight percent (8%)</fullName>
                </value>
                <value>
                    <fullName>nine percent (9%)</fullName>
                </value>
                <value>
                    <fullName>ten percent (10%)</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                    <isActive>false</isActive>
                    <label>false</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_HYGeneralAgent__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>HY General Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_HYVirtualCareServicesReferralFeePer__c</fullName>
        <label>HY VCS Referral Fee (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_HY_Product_Count__c</fullName>
        <description>This field will be used to maintain count of HY Products in an agreement</description>
        <label>HY Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_HardwareBundleCountSum__c</fullName>
        <label>HardwareBundleCountSum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Import_Fully_Signed_Document__c</fullName>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c, &quot;In Signatures&quot;), OR(ISPICKVAL( Apttus__Status__c , &quot;Ready for Signatures&quot;), ISPICKVAL( Apttus__Status__c , &quot;Other Party Signatures&quot;))), HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp;Id&amp;&quot;&amp;finishPage=APTS_ImportFullySignedDocument&amp;isCustomImport=true&amp;finish_id=&quot;&amp;Id, IMAGE(&quot;/resource/APTS_Button_ImportFullySigned&quot;, &quot;Import Fully Signed Document&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Fully Signed Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Indemnification_Categories__c</fullName>
        <defaultValue>&quot;Yes: Mutual&quot;</defaultValue>
        <description>Indicate which party shall indemnify the other against third party claims (i.e., TDH will indemnify Client = TDH Only or both parties will indemnify the other = Mutual)</description>
        <label>Indemnification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: TDH Only</fullName>
                </value>
                <value>
                    <fullName>Yes: Client Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
                <value>
                    <fullName>Standard (IP Infringement Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_InfoSec_Audit_Location__c</fullName>
        <description>Select the location the security audit will be performed</description>
        <label>InfoSec Audit Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remote Desktop</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_InfoSec_Comments__c</fullName>
        <description>DSA Comments</description>
        <label>InfoSec Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_InfoSec_Right_to_Audit_Frequency__c</fullName>
        <description>Select the frequency the client can perform a security audit</description>
        <label>InfoSec Right to Audit Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Annually and Triggering Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_InfoSec_Right_to_Audit__c</fullName>
        <description>Right to Audit</description>
        <label>InfoSec Right to Audit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: Client Only</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Information_Security__c</fullName>
        <description>If applicable, indicate location within agreement</description>
        <label>Information Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Security Exhibit</fullName>
                </value>
                <value>
                    <fullName>Within Agreement</fullName>
                </value>
                <value>
                    <fullName>Stand-Alone Security Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_InternalContractingEntity__c</fullName>
        <defaultValue>&quot;Teladoc Health, Inc.&quot;</defaultValue>
        <label>Internal Contracting Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teladoc Health, Inc.</fullName>
                </value>
                <value>
                    <fullName>Teladoc, Inc.</fullName>
                </value>
                <value>
                    <fullName>HY Holdings, Inc.</fullName>
                </value>
                <value>
                    <fullName>Consult a Doctor, Inc.</fullName>
                </value>
                <value>
                    <fullName>AmeriDoc, LLC</fullName>
                </value>
                <value>
                    <fullName>Stat Health Services, Inc.</fullName>
                </value>
                <value>
                    <fullName>Best Doctors, Inc.</fullName>
                </value>
                <value>
                    <fullName>Advance Medical, Inc.</fullName>
                </value>
                <value>
                    <fullName>Livongo Health, Inc.</fullName>
                </value>
                <value>
                    <fullName>InTouch Technologies, Inc. dba Teladoc Health, Inc. (Teladoc)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_InternalSignatureComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Contracts team will check this box if TDH signs the agreement first. TO SALES/CM: Please collect client&apos;s signature. Once fully signed, attach the fully singed document to Files. Then check the Client Signature Complete check box.</description>
        <label>Internal Signature Completed First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Internal_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company&apos;s entity responsible for the Contract</description>
        <label>Internal Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Internal Legal Entity)</relationshipLabel>
        <relationshipName>Agreements_internal_legal_entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_International_Requirements_Comments__c</fullName>
        <description>PDA Comments</description>
        <label>International Requirements Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_International_Requirements__c</fullName>
        <description>Indicate whether the agreement contains international requirements</description>
        <label>International Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Is_Agreement_Detail_Empty__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Agreement Detail Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_there_a_lapsed_user_clause__c</fullName>
        <label>Is there a lapsed user clause?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Lapsed_Clause_Claims_Data__c</fullName>
        <description>Related to the &quot;Are there marketing and DOPS requirements&quot; field. Hover over the &quot;i&quot; to see the clause language</description>
        <label>Lapsed Clause: Claims Data(Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Lapsed_Clause_Multi_Channel_Marketi__c</fullName>
        <description>Related to the &quot;Are there marketing and DOPS requirements&quot; field. Hover over the &quot;i&quot; to see the clause language</description>
        <label>Lapsed Clause: Multi-Channel Mktg (CC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Lapsed_Clause_Optimized_Enrollment__c</fullName>
        <description>Related to the &quot;Are there marketing and DOPS requirements&quot; field. Hover over the &quot;i&quot; to see the clause language</description>
        <label>Lapsed Clause: Optimized Enroll. Plan CC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Lapsed_Clause_Use_of_Incentives__c</fullName>
        <description>Related to the &quot;Are there marketing and DOPS requirements&quot; field. Hover over the &quot;i&quot; to see the clause language</description>
        <label>Lapsed Clause: Use of Incentives (CC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_LegacyContractID__c</fullName>
        <label>Legacy Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Legal_Name__c</fullName>
        <description>Used to capture the full legal name of the client as found in the contract</description>
        <label>Legal Name (Chronic Care)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Length_of_Lapsed_User_Clause__c</fullName>
        <label>Length of Lapsed User Clause</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Length_of_Minimum_Enrollment_Terms__c</fullName>
        <inlineHelpText>Length of Minimum Enrollment Terms (Months)</inlineHelpText>
        <label>Length of Minimum Enrollment Terms (M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Lessee_Returned_Date__c</fullName>
        <label>Lessee Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Lessee_Sent_Date__c</fullName>
        <label>Lessee Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Lessee_Signed_By__c</fullName>
        <label>Lessee Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Lessee_Signed_Date__c</fullName>
        <label>Lessee Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Lessee_Signed_Title__c</fullName>
        <label>Lessee Signed Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Lessor__c</fullName>
        <label>Lessor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First American</fullName>
                </value>
                <value>
                    <fullName>TIAA</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Teladoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Limitation_of_Liability_Description__c</fullName>
        <description>Please describe Limitation of Liability details.</description>
        <label>Limitation of Liability Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Limitation_of_Liability__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <description>Direct Liability</description>
        <label>Limitation of Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Uncapped</fullName>
                </value>
                <value>
                    <fullName>Product Specific</fullName>
                </value>
                <value>
                    <fullName>Silent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_LimitationsOfLiability__c</fullName>
        <description>If product specific, indicate the applicable product(s). If Other, describe.</description>
        <label>Limitations of Liability - Product/Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_of_Business__c</fullName>
        <description>Health Plan or Reseller line of business contained in agreement, such as Fully Insured, Medicare/Medicaid</description>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Livongo_product_Family__c</fullName>
        <label>Livongo product Family</label>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_MFNBestPriceExclusivityLanguage__c</fullName>
        <description>MFN/Best Price/Exclusivity clause language</description>
        <label>MFN/Best Price/Exclusivity Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MFNBestPriceExclusivity__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Indicates whether the agreement contains MFN/Best Price/Exclusivity</description>
        <label>MFN/Best Price/Exclusivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_MLA_Number__c</fullName>
        <description>Informed by leasing company or for internal lease could use a system generated number.</description>
        <label>MLA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MLA_Survival_Date__c</fullName>
        <formula>Apttus__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MLA Survival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_MaterialBreachTerminationNoticeDays__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Notice for Term. for Mat&apos;l Breach (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>